# trickshot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  GHOSTTY_PARITY.md  IDEAS.md  README.md  THEMING.md  biome.json  bunfig.toml  components.json  index.html  package.json  playwright.config.ts  rust-toolchain.toml  tsconfig.json  tsconfig.sidecar.json  vite.config.ts
.github/workflows/: ci.yml
e2e/: smoke.e2e.ts
scripts/: build-sidecar.sh  coverage-floor.sh
shared/: protocol.ts
sidecar/: agent.darwin-arm64.ts  agent.darwin-x64.ts  agent.linux-arm64.ts  agent.linux-x64.ts  agent.win-x64.ts  core.test.ts  core.ts
sidecar/providers/: anthropic-base.ts  claude.test.ts  claude.ts  claudeComment.ts  claudeMapping.ts  claudeModels.ts  claudeSuggest.ts  glm.ts  queue.test.ts  queue.ts  registry.ts  types.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  claude_config.rs  generate.rs  github.rs  lib.rs  main.rs  scripts.rs  settings.rs  terminal.rs  usage.rs  volume.rs  worktree.rs  worktree_map.rs
src/lib/: agentEvents.test.ts  agentEvents.ts  agentMessage.test.ts  agentMessage.ts  ansi.test.ts  ansi.ts  api.ts  borderGlow.ts  branchNames.test.ts  branchNames.ts  chatSilhouette.ts  claudeConfig.test.ts  claudeConfig.ts  cliActivity.test.ts  cliActivity.ts  comments.test.ts  comments.ts  composerPlaceholder.svelte.ts  conformance.test.ts  cursorTrail.ts  customScroll.ts  diffIntraline.test.ts  diffIntraline.ts  highlight.ts  hoverIntent.test.ts  hoverIntent.ts  identityGlyph.test.ts  identityGlyph.ts  mermaidTheme.test.ts  mermaidTheme.ts  minimal.test.ts  minimal.ts  mockBackend.ts  persist.ts  providers.ts  review.test.ts  review.ts  scriptEvents.test.ts  scriptEvents.ts  sdkMessage.ts  (+23 more)
src/lib/components/: AgentTerminalPane.svelte  AnsiText.svelte  ArchivedSection.svelte  AsciiEyes.svelte  AuthNotice.svelte  Chat.svelte  ChatComposer.svelte  ChatModeToggle.svelte  ChatTabs.svelte  ClaudeTerminalCell.svelte  ClaudeTerminalPane.svelte  Collapsible.svelte  CommandPalette.svelte  CommentLayer.svelte  CommentPopup.svelte  ComposeDialog.svelte  Composer.svelte  CostIndicator.svelte  DiffView.svelte  EmptyState.svelte  Eyes.svelte  Fleet.svelte  FontSelector.svelte  (+45 more)
(+8 files in other folders)
