[package]
name = "trickshot"
version = "0.1.0"
description = "A Tauri shell around the Claude Agent SDK with git worktree support"
edition = "2021"

[lib]
# The desktop entrypoint calls into this lib. Name is referenced from main.rs.
name = "trickshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri-plugin-shell pins tauri ^2.10, so resolve tauri to a compatible 2.x.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# OS keychain for the Z.ai (GLM) API key — see src/settings.rs. Native backends
# on macOS/Windows; on Linux this uses the D-Bus Secret Service (build needs
# libdbus-1-dev, runtime needs a secret-service daemon, e.g. gnome-keyring).
# `crypto-rust` keeps the crypto pure-Rust (no libssl).
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
