[package]
name = "trickshot"
version = "0.1.0"
description = "A Tauri shell around the Claude Agent SDK with git worktree support"
edition = "2021"

[lib]
# The desktop entrypoint calls into this lib. Name is referenced from main.rs.
name = "trickshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri-plugin-shell pins tauri ^2.10, so resolve tauri to a compatible 2.x.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Subscription-usage endpoint (src/usage.rs). rustls avoids an OpenSSL build dep;
# `json` pulls the response-deserialization helper.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Release builds default to an unoptimized, unstripped binary; for a shipped
# desktop app, optimize for size and strip symbols.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
# Real-git integration tests for the worktree lifecycle (worktree.rs).
tempfile = "3"
